--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     --lm-aurora-2: hsl(180, 100%, 57%);
     --lm-aurora-3: hsl(289, 100%, 74%);
     --lm-glass-bg: rgba(159, 186, 194, 0.4);
-    /*--lm-glass-border: rgba(100, 100, 100, 0.2);*/
+    --lm-glass-border: rgba(100, 100, 100, 0.01);
     --lm-glass-highlight: rgba(255, 255, 255, 0.8);
     --lm-text-primary: #1d1d1f;
     --lm-text-secondary: #585860;
@@ -28,7 +28,7 @@
     --dm-aurora-2: hsl(180, 100%, 30%);
     --dm-aurora-3: hsl(280, 97%, 74%);
     --dm-glass-bg: rgba(30, 30, 50, 0.4);
-    /*--dm-glass-border: rgba(74, 74, 87, 0.3);*/
+    --dm-glass-border: rgba(74, 74, 87, 0.01);
     --dm-glass-highlight: rgba(255, 255, 255, 0.1);
     --dm-text-primary: #f5f5f7;
     --dm-text-secondary: #a8a8b0;
